Solved horizontal scrollbar
Had problems with an unnecessary scrollbar, got it removed by changing
vw to %.

--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ header {
 	padding: 40px 0;
 	background-color: white;
 	z-index: 5;
-	width: 100vw;
+	width: 100%;
 }
 
 input {
@@ -86,7 +86,7 @@ Main Content
 .wrapper {
 	margin: 0 auto;
 	padding-top: 110px;
-	width: 100vw;
+	width: 100%;
 }
 
 
